# computer-vision-project

./: .gitignore  README.md  data_augmentation.ipynb  data_preprocessing.ipynb  empty_cache.py  pyproject.toml  run_scripts_overnight.sh
src/: app.py  console.ipynb  data_augmentation.ipynb  data_loading.py  data_preprocessing.ipynb  eval_utils.py  evaluate.py  losses.py  metrics.py  point_segmentation_ui.py  predict.py  resize_img.ipynb  robustness_test.py  segmentation_train.py  test.py  train.py  train_dropout.py  train_weigths.py
src/a_unet/: clip_model.py  data_loading.py  evaluate.py  predict.py  train.py  train_dropout.py  train_weigths.py  unet_model.py  unet_model_dropout.py
src/models/: autoencoder_model.py  clip_model.py  unet_model.py
src/models/autoencoder/: auto_encoder_model.py  autoencoder_evaluate.py  autoencoder_model.py  autoencoder_train.py  autoencoder_trainer.py
src/models/base/: model.py  registry.py  trainer.py
src/models/clip/: clip_trainer.py
src/models/unet/: unet_model.py  unet_model_dropout.py  unet_trainer.py
src/old/: autoencoder_segmentation.ipynb  data_augmentation.py  resize_img.ipynb  unet_implementation.ipynb
src/utils/: metrics.py  trainer_utils.py
