[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Henriquez Soto",email = "benja20029@uc.cl"},
    {name = "Julia Lopez Gomez",email = "j.lopez-gomez@sms.ed.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "albumentations (>=2.0.5,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
